[package]
name = "fontconfig-lab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fontconfig-parser = "0.5.2"
similar = "2.2.1"
yeslogic-fontconfig-sys = "4.0.1"

[features]
dlopen = ["yeslogic-fontconfig-sys/dlopen"]
